# esp32_hfp_ag_wifi_coexistence

./: README.md  sdkconfig
main/: Application.cpp  CMakeLists.txt  bt_app_hf.c  config.cpp  config.h  cpp_main.cpp  cpp_main.h  main.c
main/audio_input/: ADCSampler.cpp
main/transports/: TCPSocketTransport.cpp
player/: main.py
